@@ -1,3 +1,7 @@
+2005-10-15  Han-Wen Nienhuys  <hanwen@xs4all.nl>
+
+	* site/install/index.html: add a note about ghostscript on fedora. 
+
 2005-10-13  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
 	* site/install/stable.ihtml: move macos back to 2.6.3
